plugins {
    id 'org.springframework.boot' version '2.1.8.RELEASE'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id "org.liquibase.gradle" version "2.0.4"
}

group = 'vn.unicloud'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {
        url "https://git.sunshinetech.vn/api/v4/groups/478/-/packages/maven"
        name "GitLab"
        credentials(HttpHeaderCredentials) {
            name = 'Deploy-Token'
            value = 'SzjzvoGyUnuya3nZvsvg'
        }
        authentication {
            header(HttpHeaderAuthentication)
        }
    }
}

dependencies {
    def springBootVersion = '2.1.8.RELEASE'
    def umeeCommonVersion = '1.0-SNAPSHOT'
    def mysqlVersion = '8.0.27'
    def hikariVersion = '5.0.0'

    /**
     * Spring boot
     */
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: springBootVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-quartz', version: springBootVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: springBootVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: springBootVersion

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation group: 'org.keycloak', name: 'keycloak-spring-boot-starter', version: '13.0.1'
    implementation group: 'org.keycloak', name: 'keycloak-spring-security-adapter', version: '13.0.1'
    implementation group: 'org.keycloak', name: 'keycloak-admin-client', version: '13.0.1'
    implementation group: 'org.keycloak.bom', name: 'keycloak-adapter-bom', version: '13.0.1', ext: 'pom'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.6.5'

    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.1'
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.1'
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.1'

    implementation 'org.json:json:20171018'

    // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk
    implementation group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.2.1'

    /**
     * Mysql
     */
    implementation group: 'mysql', name: 'mysql-connector-java', version: mysqlVersion
    liquibaseRuntime group: 'mysql', name: 'mysql-connector-java', version: mysqlVersion
    implementation group: 'com.zaxxer', name: 'HikariCP', version: hikariVersion

    /**
     * Open API
     */
    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.5.13'

    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.webjars:webjars-locator-core'
    implementation 'org.webjars:sockjs-client:1.0.2'
    implementation 'org.webjars:stomp-websocket:2.3.3'
    implementation 'org.webjars:bootstrap:3.3.7'
    implementation 'org.webjars:jquery:3.1.1-1'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'com.google.api-client:google-api-client:1.33.0'

    implementation group: 'org.springframework.ws', name: 'spring-ws-core', version: '3.0.10.RELEASE'

    /**
     * Testing
     */
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'org.modelmapper:modelmapper:2.3.0'
//    implementation 'redis.clients:jedis'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'com.github.mvallim:emv-qrcode:0.1.2'


}


tasks.named('test') {
    useJUnitPlatform()
}
